--- a/index.html
+++ b/index.html
@@ -1,39 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>dwdd 1600 assignment list page</title>
-	</head>
-	<body>
-		<h1>[Your Name] Web Essentials Assignment Page</h1>
-		<p><a href="01test">My Test Assignment</a></p>
-		
-		<h3>Module 3</h3>
-		<p><a href="03follow-along">03 Follow Along</a></p>
-		<p><a href="03hand-coding">Hand Coding Assignment</a></p>
-		
-		<h3>Module 4</h3>
-		<p><a href="04follow-along">04 Follow Along</a></p>
-		<p><a href="04intro-css">Introduction to CSS Assignment</a></p>
-		
-		<h3>Module 5</h3>
-		<p><a href="05follow-along">05 Follow Along</a></p>
-		<p><a href="05images">Images Assignment</a></p>
-		
-		<h3>Module 6</h3>
-		<p><a href="06follow-along">06 Follow Along</a></p>
-		<p><a href="06form">Web Form Assignment</a></p>
-		
-		<h3>Module 7</h3>
-		<p><a href="07follow-along">07 Follow Along</a></p>
-		<p><a href="07advanced-css">Advanced CSS</a></p>
-		
-		<h3>Module 8</h3>
-		<p><a href="08follow-along">06 Follow Along</a></p>
-		<p><a href="08media">Media Assignment</a></p>
-		
-		<h3>Optional Capstone Activity</h3>
-		<p><a href="vacation">Vacation Web Site</a></p>
-	</body>
+<head>
+<title>America's Founding Documents</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Learn about the Declaration of Independence of the United States.">
+<meta name="author" content="Marianne Wagstaff">
+<meta charset="UTF-8">
+</head>
+<body>
+<!--  This is the start of the header section-->
+<header>
+<h1>America's Founding Documents</h1>
+<p>Know your contry's history.</p>
+</header>
+
+<!--  This is the start of the navigation section-->
+<nav>
+<ul>
+<li><a href="index.html">Declaration of Independence</a></li>
+<li><a href="signers.html">Who were the Signers</a></li>
+</ul>
+</nav>
+
+<!--  This is the start of the main section-->
+<main>
+    <h1>Declaration of Independence</h1>
+    <p>When in the Course of human events, it <strong>becomes necessary</strong> for one people to dissolve the <em>political bands</em> which have connected them with another, and to assume among the powers of the earth, the separate and equal station to which the Laws of Nature and of Nature's God entitle them, a decent respect to the opinions of <a href="signers.html#sign">mankind requires</a> that they should declare the causes which impel them to the separation.</p>
+    <h2>Problems with the King</h2>
+
+    <ul>
+        <li>He has refused his Assent to Laws, the most wholesome and necessary for the public good.</li>
+        <li>He has forbidden his Governors to pass Laws of immediate and pressing importance, unless suspended in their operation till his Assent should be obtained; and when so suspended, he has utterly neglected to attend to them.</li>
+        <li>He has refused to pass other Laws for the accommodation of large districts of people, unless those people would relinquish the right of Representation in the Legislature, a right inestimable to them and formidable to tyrants only.</li>
+        <li>He has called together legislative bodies at places unusual, uncomfortable, and distant from the depository of their public Records, for the sole purpose of fatiguing them into compliance with his measures.</li>
+    </ul>
+
+<p><a href="https://www.archives.gov/founding-docs/declaration-transcript" target="_blank"      >SOURCE</a></p>
+<h2>Where is it now?</h2>
+<p>The Declaration of Independence is currently stored at the National Archives.</p>
+<address>
+National Archives Foundation<br>
+701 Constitution Avenue, NW<br>
+Washington, DC 20408<br>
+Toll free: <a href="tel:8662726272">1-866-272-6272</a>
+</address>
+
+</main>
+
+<!--  This is the start of the footer section-->
+<footer>
+<p>&copy; 2024  |  Marianne Wagstaff  &bull; <a href="mailto:email@gmail.com">Email Us</a></p>
+</footer>
+
+</body>
+
 </html>
