--- a/04intro-css/index.html
+++ b/04intro-css/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html land="en">
+<html lang="en">
 <head>
 <title>A Sweet Start</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,7 +33,7 @@
     <h2>What you need to know.</h2>
 
     <ul>
-        <li><strong>Measuring Ingredients:</strong> Understanding how to accurately measure dry and liquid ingredients is crucial for baking success. Use the right tools, like measuring cups and spoons, and know the difference between weight and volume.</li>
+        <li><strong>Measuring Ingredients:</strong> Understanding how to accurately measure dry and liquid ingredients is crucial for baking success. <a href="recipes.html#tools">Use the right tools</a>, like measuring cups and spoons, and know the difference between weight and volume.</li>
         <li><strong>Oven Temperature:</strong> Familiarize yourself with how to preheat your oven and the importance of using an oven thermometer. Accurate temperature control can significantly affect baking times and results.</li>
         <li><strong>Ingredient Functions:</strong> Learn the roles of key ingredients, such as flour, sugar, eggs, and butter. This knowledge helps you understand how each component contributes to texture and flavor.</li>
         <li><strong>Mixing Techniques:</strong> Know basic mixing methods, like creaming, folding, and kneading. Each technique affects the final product, so using the right method is important for achieving the desired outcome.</li>
