--- a/04intro-css/recipes.html
+++ b/04intro-css/recipes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html land="en">
+<html lang="en">
 <head>
 <title>A Sweet Start</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -42,7 +42,7 @@
 <dl>
     <dt>The following are common ingredients that are found in most recipes</dt>
     <dd>Flour, Granulated Sugar, Brown Sugar, Salt, Vanilla Extract, Baking Powder, Baking Soda, Eggs, Butter, Milk.</dd>
-    <dt>The following are common tools you will need</dt>
+    <dt id="tools">The following are common tools you will need</dt>
     <dd>Mixing Bowls, Whisk, Spatula, Hand Mixer, Measuring Cups and Spoons, Baking Sheets and Pans. <a href="https://www.foodandwine.com/essential-baking-tools-8362517" target="_blank">Find more here.</a></dd>
     <dt>The following are some basic skills you should have before you begin to bake.</dt>
     <dd>Measuring ingredients, Mixing techniques, Understanding oven setting, Time management</dd>
