--- a/06follow-along/delivery.html
+++ b/06follow-along/delivery.html
@@ -54,7 +54,7 @@
     <label><input type="checkbox" name="driveway" value="driveway">Driveway</label>
     <label><input type="checkbox" name="garage" value="garage">Garage</label>
 <br><br>
-<label>Preferredd Delivery Time</label>
+<label>Preferred Delivery Time</label>
 <select name="time">
     <option value="none">Please Select</option>  
     <option value="morning">Between 7:00am and 11:00am</option>  
