--- a/thanks.html
+++ b/thanks.html
@@ -26,11 +26,11 @@
 <!--This is the start of the navigation section-->
 <nav>
     <ul>
-        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="packages.html">Vacation Packages</a></li>
         <li><a href="gallery.html"> Travel Album</a></li>
         <li><a href="video.html">Top 50 Destinations</a></li>
-        <li><a href="contact.html"> Contact</a></li>
+        <li class="active"><a href="contact.html"> Contact</a></li>
     </ul>
 </nav>
 
@@ -38,15 +38,9 @@
 
 <main>
 
-    <figure class="beachhero">
-        <img src="images/hero.jpg" alt="Beach Vacation" width="1024" height="595">
-    </figure>
-
-    <h1>About Us</h1>
-    <p>At Budget Vacations, we’ve been turning dream vacations into affordable realities since 2010. Born from a passion for adventure and a commitment to making travel accessible, our agency specializes in crafting budget-friendly getaways without sacrificing quality. Whether you're a solo backpacker, a couple looking for a romantic escape, or a family seeking fun on a dime, we tailor unforgettable experiences that fit your budget. With a network of trusted partners around the globe, we guarantee unbeatable prices on flights, accommodations, and activities.</p>
-
-    <h1>Why Choose Us?</h1>
-    <p>At Budget Vacations, we believe that extraordinary vacations shouldn’t come with an extraordinary price tag. Our expert team works tirelessly to find hidden deals, exclusive discounts, and cost-effective travel solutions tailored to your preferences. From all-inclusive tropical escapes to road trips through scenic countryside, we ensure your journey is rich in experiences without breaking the bank. With 24/7 customer support and a commitment to sustainability, we’re more than just a travel agency—we’re your trusted partner in creating memories that last a lifetime.</p>
+    <h1>Thank You!</h1>
+    <p>Your message has been received, and one of our travel experts will get back to you shortly to help plan your perfect getaway. Safe travels!</p>
+   
 </main>
 
  <!--This is the start of the footer section-->
@@ -54,6 +48,5 @@
     <p>&copy; 2024  |  Marianne Wagstaff  &bull; <a href="mailto:email@gmail.com">Email Us</a></p>
      </footer>
     
-
 </body>
 </html>
